--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: ./requirements/nginx
     depends_on:
       - wordpress
+    volumes:
+      - wordpress_vol:/var/www/html
     ports:
       - 443:443
     networks:
@@ -15,7 +17,7 @@ services:
     container_name: mariadb
     build: ./requirements/mariadb
     volumes:
-      - wordpress_vol:/var/www/html
+      - mariadb_vol:/var/lib/mysql
     networks:
       - network
     restart: always
