--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,3 +5,10 @@ RUN apt install -y mariadb-server
 
 EXPOSE 3306
 
+# configure
+COPY ./tools/configure.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/configure.sh
+RUN bash /usr/local/bin/configure.sh
+RUN rm -f /usr/local/bin/configure.sh
+
+# run entry
