--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,3 +4,11 @@ RUN apt update
 RUN apt install -y nginx openssl
 
 EXPOSE 443
+
+# configure
+COPY ./tools/configure.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/configure.sh
+RUN bash /usr/local/bin/configure.sh
+RUN rm -f /usr/local/bin/configure.sh
+
+# run entry
