--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,6 +5,8 @@ RUN apt install -y nginx openssl
 
 EXPOSE 443
 
+# copy configuration files
+
 # configure
 COPY ./tools/configure.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/configure.sh
